Move UGC subdomain, nerf chat playback
